--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,8 @@ script: ./cibuild
 env:
       global:
             - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
+notifications:
+    email:
+        - contact@evidex.me
+    on_success: change
+    on_failure: always
