Aha, hexadecimal conversion

--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ author :
   email : contact@evidex.me
   github : evidex
   twitter : evidex
-  keyprint : 0x07720ADF953759C0
+  keyprint : 07720ADF953759C0
   feedburner : 
 
 # The production_url is only used when full-domain names are needed
