--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ highlighter: pygments
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
+theme: the-program
 title : Evidex Development
 tagline: 
 author :
